--- a/courses1.html
+++ b/courses1.html
@@ -18,7 +18,7 @@
             </a>
             <ul class="nav-menu">
                 <li class="nav-item"><a href="index.html" class="nav-link">الرئيسية</a></li>
-                <li class="nav-item"><a href="courses.html" class="nav-link">الدورات</a></li>
+                <li class="nav-item"><a href="courses1.html" class="nav-link">الدورات</a></li>
                 <li class="nav-item"><a href="about.html" class="nav-link">من نحن</a></li>
                 <li class="nav-item"><a href="#sitefooter1" class="nav-link">اتصل بنا</a></li>
             </ul>
@@ -284,3 +284,4 @@
    
 </body>
 </html>
+
