--- a/about.html
+++ b/about.html
@@ -110,6 +110,7 @@
             <a href="https://www.instagram.com/nujum_alsama_1?igsh=MWhmdXI0MWpoYzJucQ==" target="_blank" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
             <a href="https://www.tiktok.com/@nujum.al_sama?_t=ZS-90NgCXyWrZQ&_r=1" target="_blank" aria-label="TikTok"><i class="fab fa-tiktok"></i></a>
             <a href="https://wa.me/+9647766266477" target="_blank" aria-label="WhatsApp"><i class="fab fa-whatsapp"></i></a>
+            <a href="https://maps.app.goo.gl/XWD5b67eHUu7C6p49?g_st=ac"><i class="fa-solid fa-location-dot"></i></a>
             <br>
             <br>
             <a  href="tel:+9467766266477">07766266477</a>
@@ -126,3 +127,4 @@
    
 </body>
 </html>
+
